feat: 3.16 and before

--- a/文老师/基础/2.md
+++ b/文老师/基础/2.md
@@ -1,4 +1,65 @@
 # 计算机硬件
 
+> 考的概率很少
 
+
+
+![QQ_1741275498133](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1741275498133.png)
+
+
+
+计算机基本五大硬件：
+
+`运算器`+`控制器` 部件 - 被集成到一起，称之为 CPU （central Processing Unit) - 中央处理单元
+
+CPU其他部位有 - 寄存器组（比如64bit，贼小的存储器）、内存总线
+
+`存储器` - 内部存储器（内存） + 外部存储器（硬盘、光盘、U盘）
+
+`输入设备`+`输出设备` - 外部设备（外设）
+
+
+
+**CPU功能**
+
+1. 程序控制 - 下面三个都是控制器
+2. 操作控制
+3. 时间控制
+4. 数据处理 - 运算器 - 算术运算和逻辑运算
+
+5. 对系统内部和外部的中断（异常）做出响应和处理
+
+![QQ_1741970122082](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1741970122082.png)
+
+程序计数器PC - 这个才是存储所有的指令所在的地址，这样方便未来读取地址
+
+地址寄存器AR - 当前CPU访问的内存地址
+
+考点（最后一句）：CPU依据`指令周期的不同阶段`来区分`指令` or `数据`
+
+
+
+
+
+#### 校验码
+
+**没懂**： 奇偶码数原因；
+
+![QQ_1742139971147](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742139971147.png)
+
+ps： **奇偶校验**码距为2的原因：一个校验位+一个错误位置（当有错误的时候用的）
+
+
+
+![QQ_1742140510799](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742140510799.png)
+
+除数为什么是`10011`，因为多项式为 `x^4 +x^1 + 1`，1 就是 `x^0`，最高次方为4，所以有5位，且`倒着`数 - 0次方、1次方、2次方、3次方、4次方，正好 `10011`
+
+ **模2运算** - `异或`运算 - 同0异1
+
+![QQ_1742140962962](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742140962962.png)
+
+
+
+#### 指令系统
 
