--- a/文老师/基础/3.md
+++ b/文老师/基础/3.md
@@ -49,9 +49,56 @@
 
 分时操作系统最常见 - CPU 以 10ms 为时间片，切分N份
 
+网络操作系统：客户端/服务器模式 - C/S架构； 对等模式 - P2P（PPP），可以互相当服务器/客户端
+
+![QQ_1742482031923](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742482031923.png)
+
+- 微型化 - 一般就几MB大小
+- 对实时性、可靠性、安全性，要求极高
+- 初始化过程 - 芯片级别初始化 -> 板子上各种外设 -> 操作系统（比如BIOS等）的初始化
+- 补充一下PC初始化过程 - 硬件启动 -> BIOS(烧在主板上的固化程序)启动 -> OS启动
+
+比如常见的，银行柜台机；更高智能的家电和车载屏幕
+
 
 
 ## 2. 进程管理
+
+![QQ_1742482330469](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742482330469.png)
+
+补充： TCB - 线程控制块；FCB - 文件控制块。 - Controller Block
+
+**三态** - `运行态`（需要CPU）、`就绪态`（除了CPU什么都有了）、`阻塞态`（也可以叫`等待态` 没有CPU、还缺少其他条件比如外设整备使用中）
+
+>  注意：需要能够画先来 `三态图`，知道谁和谁能相互转化，单向谁是和谁之间，从哪流向哪里
+>
+> 右侧的五态图，了解即可。新建态 和 终止态 从来不考，知道就行
+
+  
+
+### 前趋图
+
+![QQ_1742740952587](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742740952587.png)
+
+右图中，ABC需要同时完成，才能进入D
+
+
+
+### 进程资源图
+
+![QQ_1742741151567](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742741151567.png)
+
+了解即可，最近十年都没考过
+
+> 资源的分配，用图判断是否 陷入死锁状态
+
+
+
+### 进程同步与互斥 - 考点
+
+![QQ_1742741769849](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742741769849.png)
+
+
 
 
 
