--- a/文老师/基础/3.md
+++ b/文老师/基础/3.md
@@ -94,13 +94,51 @@
 
 
 
-### 进程同步与互斥 - 考点
+## 3. 进程同步与互斥 - 考点
 
 ![QQ_1742741769849](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742741769849.png)
 
+- 临界资源 vs 共享资源
+- `临界区` 是 **代码程序**，不是一块空间
+- 同步 vs 互斥
+- 互斥信号量（访问临界资源） vs 同步信号量（访问共享资源）
+- 共享信号量也有**数量上限**，初始开始 N-1、-1、-1； 互斥信号量相反，1和0（没有+1，因为互斥了）
 
 
 
+![QQ_1742819405925](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742819405925.png)
 
-## 3. 同步互斥
+- `P(S)` 操作： 申请资源， -1、-1、-1.  为什么会 `S<0`，因为先 `S=S-1`，再看S的值；N个申请，则为 `0-N` 
+- `V(S)` 操作：释放资源（往里面扔资源）， `S<0`，比如 `-N`, 是因为有N个进程在**等待**资源释放
+- 图中的 `T/F` 表示 `true / false`
+
+
+
+![QQ_1742820068330](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742820068330.png) 
+
+这是个互斥语句怎么写
+
+申请一个空闲位置；申请到了，释放一个商品（扔进S2中）
+
+
+
+**真题** 必考
+
+>  考察方式一
+
+![QQ_1742821547667](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742821547667.png)
+
+**前趋图每一条线对应一个信号量**，但是没说 `P1 对应S1`，P1连接两条线，所以是对应了`S1 和 S2`
+
+P1执行完，释放了两条信号量（因为P1连接着两条线）
+
+PS： 蒙对了后两个答案，还行，怒拿2分
+
+
+
+> 考察方式二
+
+![QQ_1742822254508](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1742822254508.png)
+
+会做，但是最后一个题，`5和6的空位看错了`，答案选错了，尴尬...
 
