--- a/文老师/基础/7.md
+++ b/文老师/基础/7.md
@@ -68,7 +68,7 @@
 
 
 
-## 7-pre 键与约束
+## 7-pre. 键与约束
 
 > 一些概念，帮助等会理解 范式
 
@@ -98,7 +98,36 @@
 
 ![QQ_1743091152018](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/QQ_1743091152018.png)
 
-- 每个属性都是单独的、简单属性
+- 每个属性都需要是简单属性
+- 做 规范化 的时候，首先要求出 `主键`， 主键可能是复合主键，尤其是只复合第一范式的，大概率需要两个属性合成一个主键
+- 如下图，属于`第一范式`，主键是 `学生号+课程号`
+
+![image-20250330142140435](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330142140435.png)
 
 
 
+
+
+- 主键是多个属性的时候，才会存在`部分函数依赖`；比如，上图中，`学号`单独也可能决定学生姓名
+- 所以`单属性主键`，**必然是第二范式**，所以**消除部分依赖**，也就是第二范式的概念如下图
+
+![image-20250330145254226](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330145254226.png)
+
+- **传递依赖**： 学号决定了所在系；系号决定了系主任。所以学号 -传递依赖-> 得到系主任
+- 需要**解除传递依赖**，就是第三范式，如下图
+
+![image-20250330145542664](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330145542664.png)
+
+
+
+- 第二范式**消除了 非主属性 部分依赖**
+- 第三范式**消除了 非主属性 的传递依赖**
+- `BC范式` 消除了 **主属性**对于码的部分函数依赖和传递依赖 - 考的少，稍微了解一些就好
+
+![image-20250330150143797](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330150143797.png)
+
+- 主键是候选键任选其一，所以 S、T、J 都是主属性，上图没有 `非主属性`，所以天然达到了 **第三范式**
+
+
+
+![image-20250330152245673](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250330152245673.png)
