--- a/文老师/基础/9.md
+++ b/文老师/基础/9.md
@@ -67,5 +67,58 @@
 
 #### 商业智能 BI - business intelligence
 
+![image-20250331210805431](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331210805431.png)
 
 
+
+### 反规范化操作
+
+反 **数据库的** 规范化，所以一般达到 3NF 即可
+
+表拆分的太细，那么至少影响查询效率，所以反规范化，主要目的就是为了 **提升查询效率**
+
+![image-20250331211324648](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331211324648.png)
+
+- 派生列 - 是一个计算的列，并非真正生成的。所以直接把派生列变成真实计算的结果，不用每次都计算了
+
+- 重新组表 - 合并表
+
+
+
+### 大数据
+
+- 经典问题 - 啤酒和尿布的问题 - 发现是因为 出来买尿不湿的家长以父亲居多。这就是大数据的作用 - 商品关联分析/购物篮分析
+- PB - 1024TB
+- 集群平台 - 多个平台（多个服务器才能存的下）； 高端服务器 - 就是普通服务器
+
+![image-20250331211806080](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331211806080.png)
+
+>  一道真题
+
+![image-20250331212056604](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331212056604.png)
+
+- 日志文件记录操作，不记录数据；数据文件记录数据
+
+
+
+
+
+## 12. SQL语言
+
+> 考试不需要真的编程，能看懂语法就行
+
+![image-20250331212723629](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331212723629.png)
+
+![image-20250331213137369](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331213137369.png)
+
+![image-20250331214030795](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331214030795.png)
+
+- group by 分组，没必要后面非要跟have ！
+
+
+
+![image-20250331222151221](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250331222151221.png)
+
+- 自然连接就是自然连接，派、西格玛不认识 就怪自己
+
+- 表名加不加都无所谓，比如 可以是 R.A，也可以是 A
