--- a/文老师/基础/10.md
+++ b/文老师/基础/10.md
@@ -77,3 +77,137 @@
 
 
 
+![image-20250401210718779](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401210718779.png)
+
+- 板级支持包BSP  属于 `设备驱动层`，偏底层； 板级就是开发板，板上的所有硬件都是板级
+- BootLoader - 硬件初始化和操作系统初始化；执行时屏蔽硬件细节； 类似windows的 `BIOS` 
+
+
+
+
+
+### BootLoader
+
+![image-20250401211038259](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401211038259.png)
+
+`步骤顺序记一下`，不要记错：片级初始化 -> 板级初始化 -> 系统及初始化
+
+
+
+### 设备驱动程序
+
+![image-20250401211237996](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401211237996.png)
+
+了解即可
+
+
+
+
+
+## 4. 嵌入式系统
+
+> 嵌入式系统是完整的一个嵌入式设备，包含软硬件和操作系统
+
+![image-20250401211534637](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401211534637.png)
+
+
+
+### 特性
+
+![image-20250401211806729](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401211806729.png)
+
+安全、可靠、实时
+
+
+
+### 分类
+
+![image-20250401212043766](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401212043766.png)
+
+抽象层就是驱动层。 分类了解即可
+
+
+
+
+
+### 嵌入式数据库系统
+
+> EDBSM - embeded database system manager
+
+![image-20250401212342560](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401212342560.png)
+
+
+
+![image-20250401212528109](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401212528109.png)
+
+本地的数据库叫 `嵌入式数据库`，类似localStorage； 远程数据库叫 `主数据库`
+
+
+
+
+
+### 嵌入式操作系统 EOS 
+
+> embeded OS
+>
+> linux 也是嵌入式操作系统，它是个例外 - 很大，因为它非要执行图形可视化。图形视频是最占用资源的
+
+![image-20250401212826391](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401212826391.png)
+
+可裁剪，就是即使硬件支持图形，但是我们不需要，就不加入这个功能（裁剪掉） - 其他各种操作系统也需要是可裁剪的
+
+
+
+
+
+## 5. 嵌入式实时操作系统 - RTOS
+
+> Real time OS
+>
+> 相比操作系统，更进一步的强调了 实时性； 
+>
+> 最重要的两个特点：及时响应；高准确性
+
+![image-20250401213604541](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401213604541.png)
+
+
+
+### RTOS三大特征
+
+![image-20250401213840369](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401213840369.png)
+
+
+
+注意： **所有系统，都是`软硬件紧密相结合`的，都是可以 `对软件and硬件` 进行结构和功能上的配置/裁剪！ 无论是总系统还是操作系统**
+
+![image-20250401214507312](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401214507312.png)
+
+
+
+## 6. 嵌入式上的 软件开发
+
+### 环境介绍
+
+- 相对来说，PC上面开发软件都有`IDE`(集成  `编辑 编译 调试` 等完整功能)，也就是本机开发，本机运行
+- 嵌入式，是在`宿主机系统上`开发，然后 **交叉编译**、**烧到**目标机器上，在`目标机系统`上运行
+- 因为目标机 一般内存极小、资源受限、硬件能力也受限，所以难以集成IDE且开发。 目标机一般是DOS、命令行的形式
+- 一般linux系统上开发，因为windows上有垄断，可能会开发受限
+
+![image-20250401215320088](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401215320088.png)
+
+- 两个机器之间，需要建立 **真实的物理连接**
+
+
+
+### 交叉编译 and 交叉调试
+
+![image-20250401215514447](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401215514447.png)
+
+交叉编译 - 交叉编译链； 交叉调试 - 借助仿真器
+
+
+
+### 开发工具 - 了解即可
+
+![image-20250401215817784](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250401215817784.png)
+
