--- a/文老师/基础/11.md
+++ b/文老师/基础/11.md
@@ -71,6 +71,44 @@
 
 
 
-下面的协议，英文名和中文名要记住，考点！
+#### 具体协议
 
- 
+>  下面的协议，英文名和中文名要记住，考点！
+
+![image-20250402205359970](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402205359970.png)
+
+- `IP` - Internet Protocol ; `TCP` - Transmission Control Protocol； `UDP` - User Datagram Protocol
+- `ARP` - Address Resolution Protocol； `RARP` - Reverse xxx
+- `ICMP`- Internet Control Message Protocol
+- `IGMP` - Internet Group Management Protocol
+- `UDP` - 常用于音视频等流媒体
+
+
+
+![image-20250402210125607](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402210125607.png)
+
+- TCP协议： FTP、HTTP、SMTP、POP3、Telnet
+- UDP协议：TFTP、SNMP、DHCP、DNS
+
+
+
+![image-20250402210404386](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402210404386.png)
+
+
+
+### 交换技术
+
+![image-20250402211151131](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402211151131.png)
+
+- 维护一个`mac地址（物理地址）和端口号`的映射/map表。自主学习的，也就是连接一个设备就记录一下映射
+- 交换机隔离 冲突域
+
+
+
+### 路由技术
+
+![image-20250402211746718](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250402211746718.png)
+
+- 维护一个路由表，`IP地址和端口号`的映射，也是自主学习的
+
+- 路由器隔离 广播域
