--- a/文老师/基础/13.md
+++ b/文老师/基础/13.md
@@ -1,7 +1,7 @@
 # 计算机网络
 
 8. IPv6
-9. 网络规划
+9. 网络规划与设计
 10. 网络存储
 11. 补充考点
 
@@ -11,5 +11,103 @@
 
 >  19年底时，IPv4 地址用完了。相比于IPv4 的 32位，IPv6 为 128位
 
+![image-20250404170105939](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404170105939.png)
+
+![image-20250404170236327](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404170236327.png)
+
+过渡的三种技术：
+
+- 双协议栈
+- 隧道技术
+- 翻译技术
 
 
+
+
+
+## 9. 网络规划与设计
+
+![image-20250404170544298](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404170544298.png)
+
+- 核心层 -  **只** 负责高速数据转发
+- 汇聚层 - 承上启下的作用，提供中间的一系列协议
+- 接入层 - 用户相关的
+
+
+
+### 建筑物综合布线系统 - PDS
+
+> 又称 结构化布线系统，是一个物理模型
+>
+> 六个子系统需要背住，还需要记住连接的内容和作用
+
+
+
+![image-20250404225938805](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404225938805.png)
+
+- 每一层都有一个设备间子系统，俗称`机房`
+
+
+
+
+
+## 10. 网络春初系统
+
+### RAID - 廉价磁盘冗余阵列（旧称） - 磁盘冗余阵列技术（新名称）
+
+![image-20250404230631444](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404230631444.png)
+
+- 冗余存储 - 为了可靠性
+
+
+
+![image-20250404230928322](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404230928322.png)
+
+- RAID5 - A(p) 等就是校验码，存储在不同的磁盘，但是综合起来就知识一个磁盘
+- RADI5 - 磁盘利用率是 (n-1)/n； 允许最多一个磁盘损坏
+
+
+
+![image-20250404231034296](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404231034296.png)
+
+
+
+### 网络存储技术
+
+![image-20250404231428737](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404231428737.png)
+
+![image-20250404231720181](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404231720181.png)
+
+
+
+- 三个英文名称要记住
+
+- `DAS - Direct Attached Storage` - 直接连接在PC主板上
+- `NAS - Network Attached Storage` - FTP连接访问磁盘、类似百度网盘
+- `SAN - Storage Area Network` - 多搭了一个网络，相比于NAS，节省了客户端的网络带宽占用
+- [百度百科知识点](https://baike.baidu.com/item/%E7%B6%B2%E7%B5%A1%E5%AD%98%E5%84%B2%E6%8A%80%E8%A1%93/9897877)
+
+
+
+
+
+## 11. 补充考点
+
+![image-20250404232700034](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404232700034.png)
+
+- NAT - 局域网的公有地址只有一到两个，然后10个机器（10个私用地址）共用这两个公有地址
+- 一个VLan就是一个广播域
+
+
+
+![image-20250404232955806](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404232955806.png)
+
+- 冲突域和广播域是重点。
+- 同属于一个物理层，就是冲突域
+- 一个局域网就是一个广播域，属于数据链路层
+
+
+
+![image-20250404233334304](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250404233334304.png)
+
+- www提供万维网服务（也可以称之为主机名）；mail提供邮件服务，等
