--- a/文老师/基础/14.md
+++ b/文老师/基础/14.md
@@ -6,5 +6,45 @@
 
 
 
+## 1. 计算机语言
 
+![image-20250405213130918](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405213130918.png)
+
+![image-20250405213547738](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405213547738.png)
+
+
+
+- 机器语言，只有0和1。 参考B站视频 - [用机器语言编程](https://www.bilibili.com/video/BV1Xh411X7Rk/?spm_id_from=333.337.search-card.all.click)
+- 汇编语言 - 简单的英文字母。
+- 高级语言 - C / Java / JS 等
+- 建模语言，面向对象的建模技术。 UML类图（流程图、时序图、泳道图） - [参考](https://www.bilibili.com/video/BV1Wu4y1Y7ya/?spm_id_from=333.337.search-card.all.click&vd_source=ed247871d9502bb036fccf4c8bba57cc)；[参考2](https://www.bilibili.com/video/BV1zM4y1x7Uk/?spm_id_from=333.337.search-card.all.click&vd_source=ed247871d9502bb036fccf4c8bba57cc)
+- 形式化语言(方法)，也可以称为 结构化语言。应该是文档+XXX乱七八糟的组合吧
+
+
+
+
+
+## 2. 多媒体
+
+![image-20250405231716013](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405231716013.png)
+
+![image-20250405233506431](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405233506431.png)
+
+![image-20250405234005226](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405234005226.png)
+
+- 视频编码技术 - 视频和音频，都是模拟信号，需要转换成 数字信号
+
+
+
+### 虚拟现实VR / 增强现实AR
+
+![image-20250405234147768](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405234147768.png)
+
+![image-20250405234604285](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250405234604285.png)
+
+
+
+
+
+## 3. 系统工程
 
