--- a/文老师/基础/14.md
+++ b/文老师/基础/14.md
@@ -48,3 +48,24 @@
 
 ## 3. 系统工程
 
+![image-20250407220705861](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407220705861.png)
+
+![image-20250407220937771](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407220937771.png)
+
+![image-20250407221742937](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407221742937.png)
+
+![image-20250407222255199](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407222255199.png)
+
+- 综合集成法是国人提出的，所以，多留意一点这个
+
+
+
+### 系统工程的生命周期
+
+![image-20250407222557802](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407222557802.png)
+
+![image-20250407222630770](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407222630770.png)
+
+
+
+![image-20250407223426647](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250407223426647.png)
