--- a/文老师/基础/15.md
+++ b/文老师/基础/15.md
@@ -37,3 +37,25 @@
 
 ## 2. 性能评价方法
 
+![image-20250409064605266](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets/image-20250409064605266-4152366.png)
+
+- 3MIPS  -  三百万条指令/秒
+- 最多且最频繁的那部分程序，叫做`基准测试程序`，不叫`核心程序` - 考点
+
+
+
+### 基准程序
+
+![image-20250409065230514](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250409065230514.png)
+
+- 需要记住 TPC(事务处理性能委员会) 基准程序中的 `TPC-C/OLTP` ，`TPC-D`， `TPC-E`
+
+
+
+
+
+## 3. 阿姆达尔解决方案
+
+![image-20250409065934692](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250409065934692.png)
+
+增强比例 - 有多少比例的硬件增强，而不是指 强化度
