--- a/文老师/基础/17.md
+++ b/文老师/基础/17.md
@@ -1,6 +1,7 @@
 # 8. 信息系统基础知识
 
 4. 详细系统
+4. 典型信息系统架构模型
 
 
 
@@ -10,3 +11,56 @@
 
 ### 专家系统ES
 
+![image-20250413221142473](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413221142473.png)
+
+![image-20250413221956367](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413221956367.png)
+
+
+
+
+
+### 办公自动化系统 OAS
+
+![image-20250413222114123](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413222114123.png)
+
+
+
+### 企业资源规划 ERP
+
+![image-20250413224612897](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413224612897.png)
+
+
+
+#### 结构
+
+![image-20250413224821332](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413224821332.png)
+
+
+
+>  下张图是五个层次； MRP - 物料资源计划
+
+![image-20250413225139287](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413225139287.png)
+
+> 四个模块
+
+![image-20250413225321762](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413225321762.png)
+
+
+
+
+
+## 5. 典型信息系统架构模型
+
+### 政府信息化和电子商务
+
+![image-20250413230200705](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413230200705.png)
+
+
+
+
+
+### 企业信息化和电子商务
+
+![image-20250413230127547](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413230127547.png)
+
+![image-20250413230458906](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250413230458906.png)
