--- a/文老师/基础/20_2.md
+++ b/文老师/基础/20_2.md
@@ -24,3 +24,80 @@
 
 ### 5.1 需求获取
 
+![image-20250417222638556](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250417222638556.png)
+
+- JRP - 联合需求计划，需要记一下
+
+
+
+### 5.2 需求分析
+
+![image-20250417222921454](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250417222921454.png)
+
+
+
+- 结构化的需求分析
+- 面向对象的需求分析
+
+![image-20250417223052512](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250417223052512.png)
+
+数据流图 - 常考
+
+![image-20250417223120926](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250417223120926.png)
+
+示例和解释
+
+![image-20250417223519796](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250417223519796.png)
+
+> 分层数据流图
+
+![image-20250417223717398](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250417223717398.png)
+
+- 顶层图和0层图的输入输出，必须一一对应
+
+
+
+> 数据字典DD
+
+![image-20250420223952373](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250420223952373.png)
+
+- 数字字典不描述 `外部实体`； 本质描述的是`功能`模型
+
+
+
+
+
+### 5.3 需求定义
+
+![image-20250420224149963](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250420224149963.png)
+
+- 严格定义、也称为 `结构化定义`、 `预先定义` - 说到结构化，就要想到 定义明确 四个字
+
+
+
+
+
+### 5.4 需求验证
+
+![image-20250420224251375](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250420224251375.png)
+
+- 需求基线 - 已经确认的需求规格说明书哦
+
+
+
+### 5.5 需求管理
+
+![image-20250420224334100](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250420224334100.png)
+
+#### 需求变更
+
+![image-20250420224540263](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250420224540263.png)
+
+
+
+#### 需求跟踪
+
+![image-20250420224851783](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250420224851783.png)
+
+- 正向 - 追溯； 反向 - 回溯
+
