--- a/文老师/基础/20_3.md
+++ b/文老师/基础/20_3.md
@@ -30,3 +30,26 @@
 
 ## 7. 系统设计
 
+![image-20250422062628777](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422062628777.png)
+
+
+
+![image-20250422062652434](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422062652434.png)
+
+- 扇入 - 被调用；扇出 - 被其他组件调用
+
+
+
+#### 内聚 & 耦合 - 必考
+
+![image-20250422062818689](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422062818689.png)
+
+![image-20250422062841138](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422062841138.png)
+
+
+
+
+
+## 8. 人机界面设计
+
+![image-20250422062957825](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422062957825.png)
