--- a/文老师/基础/20_4.md
+++ b/文老师/基础/20_4.md
@@ -8,13 +8,13 @@
 
 ### 原则和方法
 
-【截图】
+![image-20250422063042665](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422063042665.png)
 
 - 不能保证软件没有问题，而是减少问题的发生
 
 
 
-【截图】
+![image-20250422063110332](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422063110332.png)
 
 - 静态测试（系统未运行） VS  动态测试（系统运行中）
 
@@ -26,29 +26,68 @@
 
 ### 测试阶段
 
+![image-20250422063202902](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422063202902.png)
 
+![image-20250422063320270](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422063320270.png)
 
 - 固定流程： 1. 单元测试 -> 2. 集成测试 -> 4. 系统测试 -> 3. 确认测试；  5. 配置项测试 + 6. 回归测试 是独立的，不参与上面的线性流程的
 - 单元测试依据 -> 软件详细设计说明书
 - 集成测试依据 -> 软件概要设计文档
+- 确认测试时，以用户为主；用户参与程度如上图
 
 
 
 #### 测试策略
 
-【截图】
+![image-20250422063339395](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422063339395.png)
 
 - 自底向上
-- 自顶向下
+- 自顶向下 - 跨团队联调完成，再完成自己的细节代码
 - 三明治 - 两者的结合
 
 
 
 ### 测试用例的设计
 
-【】
+![image-20250422063542384](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422063542384.png)
 
 - `等价类划分`和`边界值划分`是考点
 
 - 等价类原则：1. 尽可能`少的设计完成多的覆盖` - 针对有效等价类（简约美） 2. 无效等价类，要少覆盖（更详尽）
+- 等价类划分，用来判断是否是一个`好的测试用例`
 - 边界值划分 - 取值 -> 四个： 边界值之外两个；边界值两个
+
+
+
+#### 白盒测试
+
+![image-20250422064650553](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422064650553.png)
+
+![image-20250422064954032](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422064954032.png)
+
+![image-20250422065153676](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422065153676.png)
+
+- 语句判断，就一条路线 - 把`条件为真`沿着路线走一遍
+- 条件覆盖，是对条件内全覆盖，但是条件之间的联动（属于判定覆盖），并不会覆盖，所以引申出来CDC
+- 判定覆盖DC - 所有条件都覆盖，但是条件间的排列组合并不完全，比如 AB+CD，只组合了AC和BD就叫覆盖，AD和BC不在乎
+- `路径覆盖`是最常考的，它把所有的路径全覆盖了
+
+
+
+
+
+### 调试
+
+![image-20250422071002928](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422071002928.png)
+
+- 归纳 - 特殊 （推导出）-> 一般； 演绎： 一般 -> 特殊
+
+![image-20250422071210120](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422071210120.png)
+
+- McCabe 度量法 m-n+2（边数 - 节点数 + 2），必考
+
+
+
+真题 - 考察 有效路径 和 McCabe度量法
+
+![image-20250422071955436](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250422071955436.png)
