--- a/文老师/基础/20_5.md
+++ b/文老师/基础/20_5.md
@@ -8,3 +8,50 @@
 
 ### 系统转换
 
+![image-20250424220252845](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250424220252845.png)
+
+左图很重要 - 根据遗留系统的技术水平和业务价值，决定对它进行 `淘汰` / `集成` / `继承` / `改造`
+
+
+
+![image-20250424220937492](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250424220937492.png)
+
+
+
+
+
+### 系统维护
+
+> 在整个生命周期中，耗时最长、开销最高
+
+![image-20250424221217695](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250424221217695.png)
+
+全部记住！
+
+
+
+
+
+### 净室软件工程CSE
+
+>  预防大于测试
+
+![image-20250424221957829](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250424221957829.png)
+
+
+
+
+
+### 基于构件的软件工程CBSE
+
+> 强调复用而非重新开发；用轮子而非造轮子
+
+![image-20250424222327793](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250424222327793.png)
+
+
+
+![image-20250424222612790](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250424222612790.png)
+
+
+
+![image-20250424222859711](/Users/wplay/2025/senior_software_infra_docs/文老师/基础/assets//image-20250424222859711.png)
